--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,8 +6,8 @@
     <mat-card-content>
       <form class="registerForm" [formGroup]="registrForm" (ngSubmit)="proceedRegistration()">
         <mat-form-field class="full-width">
-          <mat-label>Username</mat-label>
-          <input matInput placeholder="Username" formControlName="id">
+          <mat-label>UserID</mat-label>
+          <input matInput placeholder="UserID" formControlName="id">
         </mat-form-field>
 
         <mat-form-field class="full-width">
@@ -17,12 +17,12 @@
 
         <mat-form-field class="full-width">
           <mat-label>Password</mat-label>
-          <input type="password" matInput placeholder="Username" formControlName="password">
+          <input type="password" matInput placeholder="Password" formControlName="password">
         </mat-form-field>
 
         <mat-form-field class="full-width">
           <mat-label>Email</mat-label>
-          <input matInput placeholder="Username" formControlName="email">
+          <input matInput placeholder="Email" formControlName="email">
         </mat-form-field>
 
         <mat-radio-group formControlName="gender" aria-label="Gender">
@@ -34,8 +34,6 @@
           <button mat-raised-button class="form-button" color="primary">Submit</button>
           <a routerLink="/login" class="form-button" mat-raised-button color="accent">Back to Login</a>
         </div>
-
-
       </form>
     </mat-card-content>
   </mat-card>
