user role functionality created

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
 
         <div class="button-row">
           <button mat-raised-button class="form-button" color="primary">Submit</button>
-          <a routerLink="/register" class="form-button" mat-raised-button color="accent">Back to Register</a>
+          <a routerLink="/register" class="form-button" mat-raised-button color="accent">New User?</a>
         </div>
       </form>
     </mat-card-content>
